# ing-lakehouse

./: .env  .env.example  .gitignore  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Makefile  commitlint.config.js  docker-compose.local.ssl.yml  docker-compose.local.yml  docker-compose.yml  release-please-config.json  to-do.txt
.github/: pull_request_template.md
docs/: README.md
notebooks/: 00_setup_catalog.ipynb  01_write_iceberg_polars.ipynb  02_read_iceberg_polars.ipynb  05_row_mutations.ipynb  (+10 more)
services/data-generator/: CHANGELOG.md  Dockerfile  docker-compose.yml  pyproject.toml
services/data-generator/data_generator/: __main__.py  auth.py  auth_realtime.py  config.py  db.py  rideon.py
services/data-generator/data_generator/generators/: auth_gen.py  payments.py  rides_gen.py  seed.py  seed_auth.py  seed_rideon.py
services/etl-app/: CHANGELOG.md  Dockerfile  docker-compose.yml  pyproject.toml
services/etl-app-spark/: CHANGELOG.md  Dockerfile  pyproject.toml
services/etl-app-spark/conf/: spark-defaults.conf
services/etl-app-spark/docs/: etl-app-spark-explained.html
services/etl-app-spark/src/etl_app_spark/: __init__.py  __main__.py  catalog.py  config.py  meta.py  session.py
services/etl-app-spark/src/etl_app_spark/jobs/: base.py  bronze.py  gold.py  silver.py
services/etl-app-spark/src/etl_app_spark/schemas/: gold_specs.py  silver_specs.py  source_tables.py
services/etl-app/docs/: index.html
services/etl-app/etl_app/: catalog.py  config.py
services/etl-app/etl_app/jobs/: _iceberg_utils.py  airquality_bronze.py  airquality_gold.py  airquality_silver.py  bronze.py  crypto_bronze.py  crypto_gold.py  crypto_silver.py  earthquake_bronze.py  earthquake_gold.py  earthquake_silver.py  gold.py  hackernews_bronze.py  hackernews_gold.py  hackernews_silver.py  payments_bronze.py  payments_gold.py  payments_silver.py  rideon_bronze.py  silver.py  weather_bronze.py  weather_gold.py  weather_silver.py
services/etl-app/etl_app/sources/airquality/: client.py  schemas.py
services/etl-app/etl_app/sources/crypto/: client.py  schemas.py
services/etl-app/etl_app/sources/earthquake/: client.py  schemas.py
services/etl-app/etl_app/sources/hackernews/: client.py  schemas.py
services/etl-app/etl_app/sources/postgres/: client.py  schemas.py
services/etl-app/etl_app/sources/rideon/: client.py  schemas.py
services/etl-app/etl_app/sources/weather/: client.py  schemas.py
(+104 files in other folders)
