[project]
name = "data_generator"
version = "0.1.0"
description = "Faker-based payments platform data generator for ing-lakehouse ETL testing"
requires-python = ">=3.11"
dependencies = [
    "faker==26.0.0",
    "psycopg2-binary==2.9.9",
]

[tool.ruff.lint]
# Permissive baseline: catch real breakage only (syntax errors + undefined names).
# Tighten later by adding rules like "E", "W", "I", "B", "UP".
select = ["E9", "F63", "F7", "F82"]
