[project]
name = "etl_app"
version = "0.1.0"
description = "Daily weather ETL into the ing-lakehouse medallion (bronze/silver/gold)"
requires-python = ">=3.11"
dependencies = [
    "pyiceberg[s3fs,pyarrow]==0.9.1",
    "polars==1.9.0",
    "requests==2.32.3",
    "connectorx==0.3.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["etl_app*"]
