[project]
name = "etl_app"
version = "0.2.0"
description = "Daily weather ETL into the ing-lakehouse medallion (bronze/silver/gold)"
requires-python = ">=3.11"
dependencies = [
    "pyiceberg[s3fs,pyarrow]==0.11.1",
    "polars==1.26.0",
    "requests==2.32.3",
    "connectorx==0.4.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["etl_app*"]

[tool.ruff.lint]
# Permissive baseline: catch real breakage only (syntax errors + undefined names).
# Tighten later by adding rules like "E", "W", "I", "B", "UP".
select = ["E9", "F63", "F7", "F82"]
